--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Countdown Timer</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script async src="https://analytics.ad3.dev/not_the_tracker_youre_looking_for.js" data-ackee-server="https://analytics.ad3.dev" data-ackee-domain-id="e0b3ffa1-f9aa-4b14-afdc-3055a273fdab" data-ackee-opts='{ "ignoreLocalhost": true, "detailed": true }'></script>
+    <script async src="https://analytics.ad3.dev/3cpo.js" data-ackee-server="https://analytics.ad3.dev" data-ackee-domain-id="e0b3ffa1-f9aa-4b14-afdc-3055a273fdab" data-ackee-opts='{ "ignoreLocalhost": true, "detailed": true }'></script>
 </head>
 <body>
     <div id="app">
